Add Excel report exporting for calculations